<resources>
    <string name="app_name">Lucky9App</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="age">Age</string>
    <string name="menu">Menu</string>
    <string name="pictureInstruction">Upload your picture</string>
    <string name="pictureButton">Upload</string>
    <string name="setPicture"><b>Set your Picture</b></string>
    <string name="profile_picture">Profile Picture</string>
    <string name="confirmButton">Confirm</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
</resources>