<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp"
    android:background="@drawable/background"
    >

    <!-- Username Field -->
    <EditText
        android:id="@+id/username"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:layout_marginBottom="16dp"
        android:textColorHint="@android:color/white"
        android:fontFamily="@font/actor"
        android:importantForAccessibility="yes"
         />

    <!-- Email Field -->
    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="16dp"
        android:textColorHint="@android:color/white"
        android:fontFamily="@font/actor"
        android:importantForAccessibility="yes"
      />

    <!-- Password Field -->
    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"
        android:textColorHint="@android:color/white"
        android:fontFamily="@font/actor"
        android:importantForAccessibility="yes"
         />

    <!-- Gender Drop-down -->
    <Spinner
        android:id="@+id/gender_spinner"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/actor"
        android:importantForAccessibility="yes"
         />

    <!-- Age Field -->
    <EditText
        android:id="@+id/age"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:hint="@string/age"
        android:inputType="number"
        android:layout_marginBottom="16dp"
        android:textColorHint="@android:color/white"
        android:fontFamily="@font/actor"
        android:importantForAccessibility="yes"
         />

    <!-- Contact Number Field -->
    <EditText
        android:id="@+id/contact_number"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:hint="@string/contact_number"
        android:inputType="phone"
        android:layout_marginBottom="16dp"
        android:textColorHint="@android:color/white"
        android:fontFamily="@font/actor"
        android:importantForAccessibility="yes"
         />

    <!-- Address Field -->
    <EditText
        android:id="@+id/address"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:hint="@string/address"
        android:inputType="textMultiLine"
        android:layout_marginBottom="16dp"
        android:textColorHint="@android:color/white"
        android:fontFamily="@font/actor"
        android:importantForAccessibility="yes"
        />

    <!-- Sign Up Button -->
    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:background="@drawable/button_shape"
        android:layout_marginBottom="16dp"
        android:importantForAccessibility="yes"
        />

    <!-- Already have an account message -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:fontFamily="@font/actor"
        android:textColor="@android:color/white"
        android:layout_marginBottom="8dp" />

    <!-- Login Redirect Button -->
    <Button
        android:id="@+id/login_redirect_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:text="@string/login"
        android:importantForAccessibility="yes"
        />

</LinearLayout>
