<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/username"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/actor"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/white" />

    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/actor"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_shape"
        android:text="@string/login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/actor"
        android:text="@string/don_t_have_an_account"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:text="@string/sign_up" />
</LinearLayout>
