<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setPicture"
        android:fontFamily="@font/actor"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/tv_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pictureInstruction"
        android:fontFamily="@font/actor"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_marginBottom="16dp" />

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/border"
        android:contentDescription="@string/profile_picture"
        android:scaleType="centerCrop"
        android:src="@drawable/dfaultpic" />

    <!-- Horizontal LinearLayout to place buttons side by side -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/btn_select_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/buttonColor"
            android:text="@string/pictureButton"
            android:textColor="@android:color/white" />

        <!-- Add some space between buttons -->
        <Space
            android:layout_width="16dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/buttonColor"
            android:text="@string/confirmButton"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>
